Finalize Chrome extension UI, reset flow, and backend integration

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -9,6 +9,7 @@
   <body>
     <div class="wrap">
       <h2>JobPilot</h2>
+      <p class="sub">Your AI job search co-pilot</p>
 
       <label>CV ID</label>
       <input id="cvId" placeholder="Paste cv_id once..." />
